# OpenCV_ccalib

./: CMakeLists.txt  README.md
cmake/: CCalibConfig.cmake
samples/: omni_calibration.cpp  omni_stereo_calibration.cpp  random_pattern_generator.cpp
